# fastapi_zero_repository

./: .gitignore  Dockerfile  compose.yaml  memory:  pyproject.toml
.github/workflows/: pipeline.yml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 56525b7beab1_add_updated_at_to_users_table.py  7edcf92c5853_create_users_table.py  931c3cbf1f7f_create_users_table.py  a3ab64876bc4_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_todos.py  test_users.py  teste_db.py
